@@ -39,6 +39,7 @@
   *  - Library Applications:
   *   - Added reliability patches to the AVRISP-MKII Clone project's PDI/TPI protocols (thanks to Justin Mattair)
   *   - Fixed AVRISP-MKII Clone compile warning on AVR8 U4 targets even when NO_VTARGET_DETECT is enabled
+  *   - Fixed AVRISP-MKII Clone failing to start application firmware once a TPI programming session is exited
   *
   *  \section Sec_ChangeLog111009 Version 111009
   *  <b>New:</b>
